[package]
name        = "construstor"
version     = "0.1.0"
edition     = "2024"
authors     = [ "Aleksandar Ignjatijevic <a.ignjatijevic@gmail.com>" ]
description = "A tool for analyzing Solidity smart contracts to detect zero address validation patterns"
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/oakenknight/construstor"
keywords    = [ "solidity", "smart-contracts", "security", "analysis", "blockchain" ]
categories  = [ "command-line-utilities", "development-tools" ]

[dependencies]
clap       = { version = "4.5.41", features = [ "derive" ] }
colored    = "3.0.0"
dialoguer  = "0.11"
regex      = "1.10"
walkdir    = "2.3"
serde      = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

[dev-dependencies]
tempfile   = "3.8"
assert_cmd = "2.0"
